--- a/clientes.html
+++ b/clientes.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -67,7 +67,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/cliente.gif" width="50rem" alt="">
+                <img src="assets/img/cliente.gif" width="50rem" alt="cliente" title="cliente">
                 <div class="divider-custom-line"></div>
             </div>
 
@@ -80,55 +80,55 @@
                         <!-- Clientes Item 1-->
                         <div class="col-md-6 col-lg-4 mb-5">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/loreal.png" alt="loreal" />
+                                <img class="img-fluid" src="assets/img/clientes/loreal.png" alt="loreal" title="Loreal" />
                             </div>
                         </div>
                         <!-- Clientes Item 2-->
                         <div class="col-md-6 col-lg-4 mb-5">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/cemex.png" alt="cemex" />
+                                <img class="img-fluid" src="assets/img/clientes/cemex.png" alt="cemex" title="Cemex" />
                             </div>
                         </div>
                         <!-- Clientes Item 3-->
                         <div class="col-md-6 col-lg-4 mb-5">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/almexa.png" alt="almexa" />
+                                <img class="img-fluid" src="assets/img/clientes/almexa.png" alt="almexa" title="Almexa" />
                             </div>
                         </div>
                         <!-- Clientes Item 4-->
                         <div class="col-md-6 col-lg-4 mb-5">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/absara.png" alt="absara" />
+                                <img class="img-fluid" src="assets/img/clientes/absara.png" alt="absara" title="Absara" />
                             </div>
                         </div>
                         <!-- Clientes Item 5-->
                         <div class="col-md-6 col-lg-4 mb-5">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/castells.png" alt="LaboratoriosCastells" />
+                                <img class="img-fluid" src="assets/img/clientes/castells.png" alt="LaboratoriosCastells" title="Laboratorios Castells" />
                             </div>
                         </div>
                         <!-- Clientes Item 6-->
                         <div class="col-md-6 col-lg-4">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/unifoods.png" alt="unifoods" />
+                                <img class="img-fluid" src="assets/img/clientes/unifoods.png" alt="unifoods" title="Unifoods" />
                             </div>
                         </div>
                         <!-- Clientes Item 7-->
                         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/concretospilares.png" alt="ConcretosPilares" />
+                                <img class="img-fluid" src="assets/img/clientes/concretospilares.png" alt="ConcretosPilares" title="Concretos Pilares" />
                             </div>
                         </div>
                         <!-- Clientes Item 8-->
                         <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/francobel.png" alt="francobel" />
+                                <img class="img-fluid" src="assets/img/clientes/francobel.png" alt="francobel" title="Francobel" />
                             </div>
                         </div>
                         <!-- Clientes Item 9-->
                         <div class="col-md-6 col-lg-4">
                             <div class="portfolio-item2 mx-auto">
-                                <img class="img-fluid" src="assets/img/clientes/jafra.png" alt="jafra" />
+                                <img class="img-fluid" src="assets/img/clientes/jafra.png" alt="jafra" title="Jafra" />
                             </div>
                         </div>
                     </div>
