--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/herramienta.gif" width="70rem" alt="">
+                <img src="assets/img/herramienta.gif" width="70rem" alt="herramienta" title="Herramienta">
                 <div class="divider-custom-line"></div>
             </div>
 
@@ -174,16 +174,16 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/balanzasAnaliticas.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/balanzasAnaliticas.PNG" alt="balanzas Analíticas" title="Balanzas Analíticas">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Balanzas Analíticas</h5>
                                     <p class="card-text">Contamos con gran variedad de marcas reconocidas en el mercado. Brindamos asesoría previa para ayudarle a elegir el instrumento mas adecuado para sus necesidades. </p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="sello 1" title="sello 1"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=" sello 2" title="sello 2"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="sello 3" title="sello 3"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -193,16 +193,16 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="Celdas de descarga" title="Celdas de descarga">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Celdas de carga</h5>
                                     <p class="card-text">Contamos con todo tipo de celdas de carga (para balanzas, basculas, plataformas, tanques, tolvas y para aplicaciones especiales).</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="sello" title="sello 1"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="sello 2" title="sello 1"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="sello 3" title="sello 1"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -219,9 +219,9 @@
                                     <p class="card-text">Tenemos el Indicador adecuado a sus necesidades y economía material de plástico y Acero inoxidable. Manejamos marcas comerciales y reconocidas como: Mettler Toledo, Weigh-Tronix, GSE, Ohaus, Rice Lake y AND, entre otros.</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="sello" title="sello 1"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="sello" title="sello 1"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="sello" title="sello 1"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -266,7 +266,7 @@
                         <div class="row justify-content-center align-items-center">
                             <div class="row justify-content-center align-items-center">
                                 <div class="col">
-                                    <img src="assets/img/otros1.PNG" style="width: 15rem;" alt="">
+                                    <img src="assets/img/otros1.PNG" style="width: 15rem;" alt="otros productos" title="otros productos">
                                 </div>
                                 <div class="col textOtros">
                                     <p class="masthead-subheading2 mb-0">Para el área de la construcción, además de la calibración de tolvas, ofrecemos venta y calibración de basculas; portátiles, de plataforma, balanzas y basculas camioneras.</p>
@@ -276,7 +276,7 @@
 
                             <div class="row justify-content-center align-items-center">
                                 <div class="col">
-                                    <img src="assets/img/otros2.PNG" style="width: 15rem;" alt="">
+                                    <img src="assets/img/otros2.PNG" style="width: 15rem;" alt="otros productos" title="otros productos">
                                 </div>
                                 <div class="col textOtros">
                                     <p class="masthead-subheading2 mb-0"> Contamos con Servicio Preventivo y Correctivo para los instrumentos antes de su calibración.</p>
@@ -286,7 +286,7 @@
 
                             <div class="row justify-content-center align-items-center">
                                 <div class="col">
-                                    <img src="assets/img/otros3.PNG" style="width: 15rem; height: 12rem;" alt="">
+                                    <img src="assets/img/otros3.PNG" style="width: 15rem; height: 12rem;" alt="otros productos" title="otros prodcutos">
                                 </div>
                                 <div class="col textOtros">
                                     <p class="masthead-subheading2 mb-0"> Contamos con venta y calibración de Prensas, acreditados ante <b>EMA</b>.</p>
