--- a/certificaciones.html
+++ b/certificaciones.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -67,7 +67,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/sello.PNG" width="45rem" alt="">
+                <img src="assets/img/sello.PNG" width="45rem" alt="sello " title="sello">
                 <div class="divider-custom-line"></div>
             </div>
 
@@ -115,7 +115,7 @@
                                         <p class="mb-0">Requisitos generales para la competencia de los laboratorios y calabración para el área de Masa.</p>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="Acreditación 1" />
+                                <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="Acreditación 1" title="Acreditación 1" />
                             </a>
                         </div>
 
@@ -127,7 +127,7 @@
                                         <p class="mb-0">Requisitos generales para la competencia de laboratorios de ensayo y de calibración para el área de Presión.</p>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="Acreditación 2" />
+                                <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="Acreditación 2" title="Acreditación 2" />
                             </a>
                         </div>
                         <br><br><br>
@@ -139,7 +139,7 @@
                                         <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área Flujo.</p>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="Acreditación 3" />
+                                <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="Acreditación 3" title="Acreditación 3" />
                             </a>
                         </div>
                         <div class="col-lg-6">
@@ -150,7 +150,7 @@
                                         <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área de Temperatura.</p>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="Acreditación 4" />
+                                <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="Acreditación 4" title="Acreditación 4" />
                             </a>
                         </div>
                     </div>
