--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -68,7 +68,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line2"></div>
-                <img src="assets/img/contacto.gif" width="60rem" alt="gif">
+                <img src="assets/img/contacto.gif" width="60rem" alt="gif" title="contacto">
                 <div class="divider-custom-line2"></div>
             </div>
             <br>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto cdmx" />
+                        <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto cdmx" title="contacto CDMX" />
                     </div>
                 </div>
 
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" />
+                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" title="contacto Aguascalientes" />
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" />
+                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto SLP" title="Contacto SLP" />
                     </div>
                 </div>
 
