--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -68,7 +68,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/users.gif" width="90rem" alt="">
+                <img src="assets/img/users.gif" width="90rem" alt="usuario" title="usuario">
                 <div class="divider-custom-line"></div>
             </div>
 
