--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -67,7 +67,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/herramienta.gif" width="70rem" alt="">
+                <img src="assets/img/herramienta.gif" width="70rem" alt="herramienta" title="herramienta">
                 <div class="divider-custom-line"></div>
             </div>
 
@@ -86,7 +86,7 @@
                                         <h5 class="text-center mb-0 text-white">Vendemos gran variedad de basculas y balanzas de laboratorio, comerciales e industriales. <br><br> Además ofrecemos la instalación y diseños, para aplicaciones especiales.</h5>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/instalacion.png" style="height: 40rem;" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/instalacion.png" style="height: 40rem;" alt="instalación" title="instalación" />
                             </div>
                         </div>
                     </div>
@@ -103,9 +103,9 @@
                                     <p class="card-text">Contamos con gran variedad de marcas reconocidas en el mercado. Brindamos asesoría previa para ayudarle a elegir el instrumento mas adecuado para sus necesidades. </p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -116,16 +116,16 @@
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="celda descarga" title="Celda descarga">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Celdas de carga</h5>
                                     <p class="card-text">Contamos con todo tipo de celdas de carga (para balanzas, basculas, plataformas, tanques, tolvas y para aplicaciones especiales).</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono2" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -136,16 +136,16 @@
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/indicadoresdepeso.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/indicadoresdepeso.PNG" alt="indicadores de peso" title="indicadores de peso">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Indicadores de peso</h5>
                                     <p class="card-text">Tenemos el Indicador adecuado a sus necesidades y economía material de plástico y Acero inoxidable. Manejamos marcas comerciales y reconocidas como: Mettler Toledo, Weigh-Tronix, GSE, Ohaus, Rice Lake y AND, entre otros.</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
@@ -156,16 +156,16 @@
                 <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/basculas.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/basculas.PNG" alt="basculas" title="basculas">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Básculas</h5>
                                     <p class="card-text">Contamos con gran variedad de básculas Mecánicas y Digitales para de uso comercial e industrial.</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
                                 </div>
 
                             </div>
@@ -177,16 +177,16 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto">
                         <div class="card">
-                            <img class="card-img-top" src="assets/img/portfolio/valvulas.PNG" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/portfolio/valvulas.PNG" alt="valvulas" title="valvulas">
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">Válvulas de seguridad</h5>
                                     <p class="card-text">Venta, mantenimiento, ajuste de presión y calibración de válvulas de seguridad en material de bronce y acero inoxidable.</p>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt=""><br> Seguridad</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=""><br>El mejor precio</div>
-                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt=""><br>A tiempo</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
                                 </div>
                             </div>
                         </div>
