--- a/servicios.html
+++ b/servicios.html
@@ -28,7 +28,7 @@
 
 
 
-            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt="logo" title="semec"> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -74,7 +74,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <img src="assets/img/users.gif" width="90rem" alt="">
+                <img src="assets/img/users.gif" width="90rem" alt="usuario" title="usuario">
                 <div class="divider-custom-line"></div>
             </div>
 
@@ -92,7 +92,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/tolvas1.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/tolvas1.jpg" style="width: 100%; height: 100%;" alt="Tolvas" title="Tolvas" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -144,7 +144,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/calibracion basculas.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/calibracion basculas.jpg" style="width: 100%; height: 100%;" alt="Basculas" title="Básculas" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -180,7 +180,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/pesas.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/pesas.jpg" style="width: 100%; height: 100%;" alt="calibracion" title="Calibración" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -216,7 +216,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/fuerza2.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/fuerza2.jpg" style="width: 100%; height: 100%;" alt="fuerza" title="Fuerza" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -252,7 +252,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/calibracion valvulas.jpg" style="width: 100%; height: 100%;" alt="calibración de valvulas" />
+                                <img class="img-fluid" src="assets/img/servicios/calibracion valvulas.jpg" style="width: 100%; height: 100%;" alt="calibración de valvulas" title="calibración de valvulas" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -288,7 +288,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/temperatura.jpg" style="width: 100%; height: 100%;" alt="temperatura" />
+                                <img class="img-fluid" src="assets/img/servicios/temperatura.jpg" style="width: 100%; height: 100%;" alt="temperatura" title="temperatura" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -321,7 +321,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/mantenimiento.png" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/mantenimiento.png" style="width: 100%; height: 100%;" alt="Mantenimiento" title="mantenimiento" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
@@ -354,7 +354,7 @@
                                 <div class="caption">
                                     <div class="caption-content"></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/servicios/verificacion2.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                <img class="img-fluid" src="assets/img/servicios/verificacion2.jpg" style="width: 100%; height: 100%;" alt="Verificación" title="Verificación" />
                             </div>
                         </div>
                         <div class="col-md-7" style="padding: 1rem;">
