--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
-    <title>Contacto | SEMEC Calibraciónes</title>
-    <meta name="description" content="Ponte en contacto con nosotros, TODO México calibra con SEMEC">
+    <title>SEMEC Calibraciónes SA. de CV.</title>
+    <meta name="description" content="Ponte en contacto con nosotros, TODO México calibra con SEMEC, más de 11 años de experiencia nos respaldan.">
     <meta name="author" content="SEMEC calibraciónes de México">
-    <meta name="keywords" content="calibrar bascula, calibracion, calibracion de fuerza, calibracion de pesas, calibracion de instrumentos para pesar, calibracion en presion, calibracion de temperatura, inspeccion de basculas" />
+    <meta name="keywords" content="calibrar bascula, calibracion, calibracion de fuerza, calibracion de pesas, calibracion de temperatura, inspeccion de basculas" />
     <meta name="robots" content="index,follow" />
     <meta name="google" content="notranslate" />
-    <link rel="canonical" href="https://semec.com.mx/" />
+    <link rel="canonical" href="https://www.semec.com.mx/" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="author" content="" />
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/logo.ico" />
