--- a/index.html
+++ b/index.html
@@ -108,32 +108,9 @@
                 <div class="divider-custom-icon"><img src="assets/img/sello.PNG" width="22%" alt=""></div>
             </div>
 
-            <!-- Icon Divider 
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <img src="assets/img/sello.PNG" width="45rem" alt="">
-                    <div class="divider-custom-line"></div>
-                </div> -->
-
-
             <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
-            <br><a class="btn Btnvertodos btn-xl" href="certificaciones.html">Ver más</a><br><br>
+            <br><a class="btn Btnvertodos btn-xl" href="certificaciones.html">Ver más</a>
 
-
-            <!-- Certificaciones Grid Items
-                <div class="row justify-content-center" style="margin-top: 2rem;" >
-                    <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block" >
-                        <div class="mx-auto">
-                            <img class="img-fluid" src="assets/img/certificacion1.png" alt="..." />
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block">
-                        <div class="mx-auto">
-                            <img class="img-fluid" src="assets/img/certificacion2.png" alt="..." />
-                        </div>
-                    </div>                  
-                </div>
-                -->
         </div>
     </section>
 
@@ -145,7 +122,7 @@
             <br>
             <!-- Clientes Section Content-->
             <div class="row text-center">
-                <p class="lead">En SEMEC CALIBRACIONES S.A. DE C.V., trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
+                <p class="lead">En SEMEC CALIBRACIONES S.A. DE C.V , trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
                 <p class="lead">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
             </div>
             <!-- Clientes Section Button-->
@@ -154,7 +131,7 @@
             </div>
         </div>
     </section>
-    <br><br>
+
     <!-- Productos Section-->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
@@ -251,7 +228,6 @@
             </div>
         </div>
     </section>
-    <br><br>
 
     <!-- Otros productos y costos Section-->
     <section class="page-section portfolio text-center">
@@ -322,10 +298,8 @@
                             <div class="d-flex align-items-end justify-content-end">
                                 <br><br><br><br>
                                 <small>
-                                        <b>Nota:</b><span > Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
-                                        <!-- <b>Nota:</b><span style="margin-left: 5px;">Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span> -->
-
-                                    </small>
+                                    <b>Nota:</b><span> Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
+                                </small>
                             </div>
 
                         </div>
