--- a/contacto.html
+++ b/contacto.html
@@ -77,7 +77,7 @@
             <div class="row justify-content-center align-items-center">
                 <h4 class="text-secondary"><b>LOCALÍZANOS EN</b></h4><br>
 
-                <div class="col-lg-5 d-none d-lg-block">
+                <div class="col-lg-5">
                     <div class="colContact">
                         <h6>Oficinas generales:</h6><br>
                         <p class="lead">
@@ -92,7 +92,7 @@
                             width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
-                <div class="col-lg-5 d-none d-lg-block">
+                <div class="col-lg-5">
                     <div class="colContact2">
                         <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto cdmx" />
                     </div>
@@ -115,7 +115,7 @@
                             width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
-                <div class="col-lg-5 d-none d-lg-block">
+                <div class="col-lg-5">
                     <div class="colContact2">
                         <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" />
                     </div>
@@ -139,9 +139,9 @@
 
                     </div>
                 </div>
-                <div class="col-lg-5 d-none d-lg-block">
+                <div class="col-lg-5">
                     <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" />
+                        <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto ags" />
                     </div>
                 </div>
 
