--- a/contacto.html
+++ b/contacto.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto SLP" title="Contacto SLP" />
+                        <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto SLP" title="Contacto SLP" />
                     </div>
                 </div>
 
