--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <br>
             <!-- Clientes Section Content-->
             <div class="row text-center">
-                <p class="lead">En SEMEC CALIBRACIONES S.A. DE C.V , trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
-                <p class="lead">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
+                <p class="masthead-subheading">En SEMEC CALIBRACIONES S.A. DE C.V , trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
+                <p class="masthead-subheading">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
             </div>
             <!-- Clientes Section Button-->
             <div class="text-center mt-4">
@@ -148,7 +148,7 @@
             <div class="row justify-content-center">
                 <!-- Productos Item 1-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <div class="portfolio-item mx-auto">
+                    <div class="portfolio-item mx-auto" >
                         <div class="card">
                             <img class="card-img-top" src="assets/img/portfolio/balanzasAnaliticas.PNG" alt="balanzas Analíticas" title="Balanzas Analíticas">
                             <div class="card-body">
@@ -161,6 +161,7 @@
                                     <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt=" sello 2" title="sello 2"><br>El mejor precio</div>
                                     <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="sello 3" title="sello 3"><br>A tiempo</div>
                                 </div>
+                            
                             </div>
                         </div>
                     </div>
@@ -218,8 +219,8 @@
             <br>
             <!-- About Section Content-->
             <div class="row text-center">
-                <p class="lead">Ofrecemos servicios integrales de calibración de instrumentos en magnitudes como:</p>
-                <p class="lead">Masa, Temperatura, Presion, Fuerza, Volumen, Flujo y Dimensional</p>
+                <p class="masthead-subheading">Ofrecemos servicios integrales de calibración de instrumentos en magnitudes como:</p>
+                <p class="masthead-subheading">Masa, Temperatura, Presion, Fuerza, Volumen, Flujo y Dimensional</p>
             </div>
             <!-- About Section Button-->
             <div class="text-center mt-4">
@@ -278,25 +279,25 @@
                         <div class="row justify-content-center text-white costosContainer">
                             <ul>
                                 <li>
-                                    <p class="masthead-subheading mb-0">Los mas competitivos del mercado.</p>
+                                    <p class="masthead-subheading2 mb-0">Los mas competitivos del mercado.</p>
                                 </li><br>
                                 <li>
-                                    <p class="masthead-subheading mb-0">Generamos rutas para reducir costos.</p>
+                                    <p class="masthead-subheading2 mb-0">Generamos rutas para reducir costos.</p>
                                 </li><br>
                                 <li>
-                                    <p class="masthead-subheading mb-0">Recomendamos mejoras a sus equipos.</p>
+                                    <p class="masthead-subheading2 mb-0">Recomendamos mejoras a sus equipos.</p>
                                 </li><br>
                                 <li>
-                                    <p class="masthead-subheading mb-0">Contamos con personal altamente capacitado y nuestra experiencia nos respalda.</p>
+                                    <p class="masthead-subheading2 mb-0">Contamos con personal altamente capacitado y nuestra experiencia nos respalda.</p>
                                 </li><br>
                                 <li>
-                                    <p class="masthead-subheading mb-0">Trabajamos para una amplia gama de concreteras en México.</p>
+                                    <p class="masthead-subheading2 mb-0">Trabajamos para una amplia gama de concreteras en México.</p>
                                 </li>
                             </ul>
 
                             <div class="d-flex align-items-end justify-content-end">
                                 <br><br><br><br>
-                                <small>
+                                <small class="masthead-subheading2">
                                     <b>Nota:</b><span> Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
                                 </small>
                             </div>
